<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".AddSensorActivity">

    <View
        android:id="@+id/dividerAddSensor"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/margin_extra_small"
        android:layout_marginTop="@dimen/margin_small"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/white"
        android:foregroundTint="@color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addSesorsTxt" />

    <TextView
        android:id="@+id/addSesorsTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_big"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/addSesorsTxt"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/addSensorsBackBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top_small"
        android:layout_marginTop="37dp"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_button_description"
        app:layout_constraintBottom_toBottomOf="@+id/addSesorsTxt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        app:tint="@color/blue" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/layout_constraintHorizontal_bias" />

    <TextView
        android:id="@+id/sensorTypeTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_small"
        android:text="@string/sensorTypeTxt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dividerAddSensor" />

    <Spinner
        android:id="@+id/dataTypeSpinner"
        style="@style/Widget.AppCompat.Spinner.Underlined"
        android:layout_width="@dimen/edit_width"
        android:layout_height="@dimen/edit_height"
        android:backgroundTint="@color/white"
        android:dropDownSelector="@color/blue"
        android:foregroundTint="@color/blue"
        android:popupBackground="@color/blue"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensorTypeTxt" />

    <TextView
        android:id="@+id/dataRangeLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/dataRangeLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataTypeSpinner" />

    <EditText
        android:id="@+id/rangeFromInput"
        android:layout_width="@dimen/edit_width_half"
        android:layout_height="@dimen/edit_height"
        android:backgroundTint="@color/white"
        android:digits="-0123456789."
        android:hint="@string/rangeFromInput"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/rangeToInput"
        app:layout_constraintHorizontal_bias="@dimen/layout_constraintHorizontal_bias"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dataRangeLabel" />

    <EditText
        android:id="@+id/rangeToInput"
        android:layout_width="@dimen/edit_width_half"
        android:layout_height="@dimen/edit_height"
        android:backgroundTint="@color/white"
        android:digits="-0123456789."
        android:hint="@string/rangeToInput"
        android:inputType="numberDecimal"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/layout_constraintHorizontal_bias"
        app:layout_constraintStart_toEndOf="@+id/rangeFromInput"
        app:layout_constraintTop_toBottomOf="@+id/dataRangeLabel" />

    <TextView
        android:id="@+id/frequencyLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium"
        android:text="@string/frequencyLabel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rangeToInput" />

    <LinearLayout
        android:id="@+id/humidityPickerContainer"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/frequencyLabel">

        <NumberPicker
            android:id="@+id/hourPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:theme="@style/AppTheme.Picker" />

        <NumberPicker
            android:id="@+id/minutePicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/margin_small"
            android:theme="@style/AppTheme.Picker" />

        <NumberPicker
            android:id="@+id/secondPicker"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.Picker" />
    </LinearLayout>

    <EditText
        android:id="@+id/locationInput"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="@dimen/margin_top_small"
        android:ems="10"
        android:hint="@string/locationInput"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        app:layout_constraintEnd_toStartOf="@+id/mapSearchButton"
        app:layout_constraintHorizontal_bias="@dimen/layout_constraintHorizontal_bias"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/humidityPickerContainer" />

    <ImageButton
        android:id="@+id/mapSearchButton"
        android:layout_width="@dimen/image_layout"
        android:layout_height="@dimen/image_layout"
        android:layout_marginEnd="@dimen/margin_top_small"
        android:contentDescription="@string/mapSearchButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/layout_constraintHorizontal_bias"
        app:layout_constraintStart_toEndOf="@+id/locationInput"
        app:layout_constraintTop_toBottomOf="@+id/humidityPickerContainer"
        app:srcCompat="@drawable/baseline_search_24"
        android:background="@android:color/transparent"/>


    <!-- Google Map -->
    <com.google.android.gms.maps.MapView
        android:id="@+id/mapFragment"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/map_height"
        android:contentDescription="@string/mapFragment"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationInput" />

    <Switch
        android:id="@+id/addSensorSwitch"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/edit_height"
        android:layout_marginTop="@dimen/margin_top_small"
        android:text="@string/addSensorSwitch"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mapFragment"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <Button
        android:id="@+id/saveSensorBtn"
        style="@style/CustomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_small"
        android:drawableEnd="@drawable/baseline_save_24"
        android:fontFamily="@font/roboto_bold"
        android:insetLeft="@dimen/inset_right"
        android:insetRight="@dimen/inset_right"
        android:text="@string/saveBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/addSensorSwitch" />

</androidx.constraintlayout.widget.ConstraintLayout>