<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".MainActivity">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/layout_constraintHorizontal_bias" />

    <Button
        android:id="@+id/sensorBtn"
        style="@style/CustomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/baseline_sensors_24"
        android:fontFamily="@font/roboto_bold"
        android:insetLeft="@dimen/inset_right"
        android:insetRight="@dimen/inset_right"
        android:text="@string/dataBtn"
        app:layout_constraintBottom_toTopOf="@+id/exitBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/simulationButton" />

    <Button
        android:id="@+id/pictureBtn"
        style="@style/CustomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/baseline_add_a_photo_24"
        android:fontFamily="@font/roboto_bold"
        android:insetLeft="@dimen/inset_right"
        android:insetRight="@dimen/inset_right"
        android:text="@string/pictureBtn"
        app:layout_constraintBottom_toTopOf="@+id/simulationButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/messageBtn" />

    <Button
        android:id="@+id/messageBtn"
        style="@style/CustomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/baseline_message_24"
        android:fontFamily="@font/roboto_bold"
        android:insetLeft="@dimen/inset_right"
        android:insetRight="@dimen/inset_right"
        android:text="@string/messageBtn"
        app:layout_constraintBottom_toTopOf="@+id/pictureBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline3" />

    <Button
        android:id="@+id/exitBtn"
        style="@style/CustomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:drawableEnd="@drawable/baseline_logout_24"
        android:fontFamily="@font/roboto_bold"
        android:insetRight="@dimen/inset_right"
        android:text="@string/exitBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sensorBtn" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="@dimen/layout_constraintHorizontal_bias" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:contentDescription="@string/image"
        app:layout_constraintBottom_toTopOf="@+id/guideline3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/serverless_logo" />

    <Button
        android:id="@+id/simulationButton"
        style="@style/CustomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:drawableEnd="@drawable/baseline_format_list_bulleted_24"
        android:fontFamily="@font/roboto_bold"
        android:insetLeft="@dimen/inset_right"
        android:insetRight="@dimen/inset_right"
        android:text="@string/simulationBtn"
        app:layout_constraintBottom_toTopOf="@+id/sensorBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pictureBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>