<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/layout_constraintHorizontal_bias" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top_small"
        android:layout_marginTop="@dimen/margin_top_small"
        android:layout_marginEnd="@dimen/margin_top_small"
        app:cardBackgroundColor="@color/blue"
        app:cardCornerRadius="@dimen/radius"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="90dp">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/image_dimen"
                android:layout_height="@dimen/image_dimen"
                android:layout_marginStart="@dimen/margin_top_small"
                android:contentDescription="@string/personLogo"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/baseline_person_24" />

            <TextView
                android:id="@+id/nameTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_top_small"
                android:text="@string/nameTxt"
                android:textColor="@color/white"
                android:textSize="@dimen/sp_text_size"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/genderTxt"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="@dimen/layout_constraintVertical_bias" />

            <TextView
                android:id="@+id/genderTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_top_small"
                android:text="@string/genderTxt"
                android:textColor="@color/white"
                app:layout_constraintBottom_toTopOf="@+id/ageTxt"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/nameTxt" />

            <TextView
                android:id="@+id/ageTxt"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_top_small"
                android:text="@string/ageTxt"
                android:textColor="@color/white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/genderTxt" />

            <TextView
                android:id="@+id/gender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_extra_small"
                android:text="@string/gender"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/ageTxt"
                app:layout_constraintStart_toEndOf="@+id/genderTxt"
                app:layout_constraintTop_toBottomOf="@+id/nameTxt" />

            <TextView
                android:id="@+id/age"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:text="@string/age"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ageTxt"
                app:layout_constraintTop_toBottomOf="@+id/genderTxt" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>