<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    tools:context=".PictureActivity">

    <Button
        android:id="@+id/takePictureBtn"
        style="@style/CustomButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin_large"
        android:drawableEnd="@drawable/baseline_add_a_photo_24"
        android:fontFamily="@font/roboto_bold"
        android:insetLeft="@dimen/inset_right"
        android:insetRight="@dimen/inset_right"
        android:text="@string/takePictureBtn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="@dimen/layout_constraintHorizontal_bias"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="@dimen/layout_constraintHorizontal_bias" />

    <View
        android:id="@+id/divider"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/margin_extra_small"
        android:layout_marginTop="@dimen/margin_small"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/white"
        android:foregroundTint="@color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_top_big"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/textView4"
        android:textColor="@color/blue"
        android:textSize="@dimen/text_size_title"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/zero_dp"
        android:layout_marginBottom="@dimen/margin_top_small"
        android:background="@color/lightgray"
        app:layout_constraintBottom_toTopOf="@+id/takePictureBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/divider" />


    <View
        android:id="@+id/divider2"
        android:layout_width="@dimen/zero_dp"
        android:layout_height="@dimen/margin_extra_small"
        android:background="?android:attr/listDivider"
        android:backgroundTint="@color/white"
        android:foregroundTint="@color/white"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/recyclerView" />

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_top_small"
        android:layout_marginTop="@dimen/margin_medium"
        android:background="@android:color/transparent"
        android:contentDescription="@string/back_button_description"
        app:layout_constraintBottom_toTopOf="@+id/recyclerView"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/baseline_arrow_back_24"
        app:tint="@color/blue" />

</androidx.constraintlayout.widget.ConstraintLayout>